2002-10-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-select-buffer-mode): Add some key descriptions to
	the doc-string.

2002-10-17  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* icons/db-history-up.xpm: Add missing comma.

2002-07-19  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-symbol.el: New file.

	* w3m.el: Autoload "w3m-symbol" for `w3m-replace-symbol'.
	(w3m-use-symbol): New variable.
	(w3m-fontify): Call `w3m-replace-symbol'.

	* w3mhack.el (w3mhack-examine-modules): Don't byte-compile
	w3m-symbol.el if no-MULE.

2002-10-17  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-e21.el (w3m-buffer-favicon): Bind local null handler with
	`w3m-process-with-null-handler' instead of `lexical-let'.

2002-10-16  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-proc.el (w3m-process-push, w3m-process-start): Fix last
	change.

2002-10-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-rendering-half-dump): To decide whether
	`w3m-treat-image-size' is ignored, use
	`w3m-display-inline-images-p' instead of `w3m-display-graphic-p'.
	Thanks to Mito for his report.
	(w3m-about): Add `witdh' and `height' property to <img> tag.

2002-10-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-emacs-w3m-icon): Use helvetica-bold to widen image.

2002-10-15  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-lynx-like-map): Don't define key bindings for
	`w3m-zoom-out-image' and `w3m-zoom-in-image' when emacs-w3m in
	running in non-graphical display.
	(w3m-info-like-map): Ditto.

2002-10-15  KAMO Tomoyuki  <kamo@ITmanage.co.jp>

	* shimbun/sb-tcup.el (shimbun-tcup-get-group-key): Return
	(hostname . board-id) to support Tripod "personal BBS".
	(shimbun-tcup-make-id): Follow the above change.

2002-10-15  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
	    Mito <mito@mxa.nes.nec.co.jp>

	* w3m.el (w3m-rendering-half-dump): Ignore `w3m-treat-image-size'
	when emacs-w3m is running in non-graphical display.

2002-10-13  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
